@@ -1,3 +1,9 @@
+2007-01-21 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
+	* Program.cs:
+	- 鍵生成速度計測部分からリソース開放コストを除外
+	- 変換速度計測に利用するバッファサイズを拡張
+
 2006-12-29 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
 	* Program.cs: NUnitコンソールが動かない環境でも簡易テストを行えるように改良
